<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:andriod="http://schemas.android.com/apk/res-auto">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >

    <EditText
        android:hint="@string/carnet"
        android:layout_width="fill_parent"
        style="@style/ed1"
        android:id="@+id/newcarnet"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
    <EditText
        style="@style/ed1"
        android:hint="@string/nombres"
        android:layout_width="fill_parent"
        android:id="@+id/newnombres"
        android:inputType="textPersonName"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
    <EditText
        style="@style/ed1"
        android:hint="@string/apellidos"
        android:layout_width="fill_parent"
        android:id="@+id/newapellidos"
        android:inputType="textPersonName"/>

</android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
    <EditText
        style="@style/ed1"
        android:hint="@string/newpassword"
        android:layout_width="fill_parent"
        android:id="@+id/password"
        android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
    <EditText
        style="@style/ed1"
        android:hint="@string/confirmpassword"
        android:layout_width="fill_parent"
        android:id="@+id/confirmpassword"
        android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_marginBottom="10dp"
        android:id="@+id/genero"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="Sexo"
        android:textSize="18dp"/>
    <Spinner
        android:layout_marginBottom="10dp"
        android:textAppearance = "?android:attr/textAppearanceLarge"
        android:id="@+id/SpinGenero"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:entries="@array/genero"
        style="@style/Base.DialogWindowTitle.AppCompat"
        android:background="@drawable/spinner_item_selector"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:hint="@string/fecha_nacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:layout_marginBottom="15dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            style="@style/ed1"
            android:layout_gravity="center_horizontal"
            android:hint="@string/dia"
            android:layout_width="150dp"
            android:id="@+id/editdia"
            android:inputType="number"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"/>

        <Spinner
            android:gravity="center"
            android:entries="@array/meses"
            android:layout_marginBottom="10dp"
            android:textAppearance = "?android:attr/textAppearanceLarge"
            android:id="@+id/SpinMes"
            android:layout_width="200dp"
            android:layout_height="50dp"
            style="@style/Base.DialogWindowTitle.AppCompat"
            android:background="@drawable/spinner_item_selector"/>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textlayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
    <EditText
        style="@style/ed1"
        android:layout_gravity="center_horizontal"
        android:hint="@string/anio"
        android:layout_width="150dp"
        android:id="@+id/newanio"
        android:inputType="number"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:hint="@string/btnregistrar"
        android:layout_gravity="center_horizontal"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:id="@+id/guardarnuevousuario"
        android:background="#FF6600"
        android:onClick="alta"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:clickable="false" />
</LinearLayout>

</ScrollView>